# check-in-backoffice/src/generated/openapi.json
@@ -1483,6 +1483,14 @@
       "UpdateBackofficeUserRequest": {
         "type": "object",
         "properties": {
+          "email": {
+            "type": "string",
+            "format": "email"
+          },
+          "password": {
+            "type": "string",
+            "minLength": 8
+          },
           "fullName": {
             "type": "string",
             "nullable": true,
